--- a/cjl_trade_market/package.json
+++ b/cjl_trade_market/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-bus": "^1.2.0",
     "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1"
   },
