--- a/cjl_trade_market/package.json
+++ b/cjl_trade_market/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "es6-promise": "^4.2.5",
     "vue": "^2.5.2",
     "vue-bus": "^1.2.0",
     "vue-i18n": "^8.3.2",
