--- a/cjl_trade_market/package.json
+++ b/cjl_trade_market/package.json
@@ -14,6 +14,7 @@
     "es6-promise": "^4.2.5",
     "vue": "^2.5.2",
     "vue-bus": "^1.2.0",
+    "vue-clipboard2": "^0.2.1",
     "vue-i18n": "^8.3.2",
     "vue-qr": "^1.5.2",
     "vue-router": "^3.0.1"
