--- a/trade_new_v1/package.json
+++ b/trade_new_v1/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.4.11",
     "normalize.css": "^8.0.1",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1"
   },
