--- a/trade_new_v1/package.json
+++ b/trade_new_v1/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
-    "normalize.css": "^8.0.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-i18n": "^8.3.2",
+    "vue-qr": "^1.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
