--- a/binmark_trade_mobile/package.json
+++ b/binmark_trade_mobile/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "echarts": "^4.2.0-rc.2",
-    "normalize.css": "^8.0.1",
     "sass-resources-loader": "^2.0.0",
+    "vue-awesome-swiper": "^3.1.3",
     "vue": "^2.5.2",
     "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1",
