--- a/binmark_trade_mobile/package.json
+++ b/binmark_trade_mobile/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "echarts": "^4.2.0-rc.2",
     "sass-resources-loader": "^2.0.0",
-    "vue-awesome-swiper": "^3.1.3",
-    "vue-qr": "^1.5.2",
-    "vue-clipboard2": "^0.2.1",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-clipboard2": "^0.2.1",
     "vue-i18n": "^8.3.2",
+    "vue-qr": "^1.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
