--- a/binmark_trade_mobile/package.json
+++ b/binmark_trade_mobile/package.json
@@ -11,9 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "echarts": "^4.2.0-rc.2",
+    "highcharts": "^7.0.2",
     "sass-resources-loader": "^2.0.0",
-    "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clipboard2": "^0.2.1",
@@ -66,14 +65,15 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vant": "^1.3.9",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.0.0",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
