--- a/vic_tribe/package.json
+++ b/vic_tribe/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "echarts": "^4.2.0-rc.2",
     "normalize.css": "^8.0.1",
+    "sass-resources-loader": "^2.0.0",
     "vue": "^2.5.2",
     "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1",
